themes/e-commerce/assets/less/e-commerce.less
/* ... */
@media (min-width:992px) {
  .navbar-brand {
    >img {
      height: 50px;
      max-width: 400px;
      margin: -15px;
    }
  }
  .timeline {
    >li {
      min-height: 150px;
      .timeline-panel {
        padding: 0 20px 20px;
      }
      .timeline-image {
        width: 150px;
        height: 150px;
        margin-left: -75px;
        h4 {
          margin-top: 30px;
          font-size: 18px;
          line-height: 26px;
        }
      }
    }
    >li.timeline-inverted {
      >.timeline-panel {
        padding: 0 20px 20px;
      }
    }
  }
  aside.clients {
    img {
      margin: 50px auto;
    }
  }
}
@media (min-width:767px) {
  #portfolio {
    .portfolio-item {
      margin: 0 0 30px;
    }
  }
}
@media (min-width:1200px) {
  .timeline {
    >li {
      min-height: 170px;
      .timeline-panel {
        padding: 0 20px 20px 100px;
      }
      .timeline-image {
        width: 170px;
        height: 170px;
        margin-left: -85px;
        h4 {
          margin-top: 40px;
        }
      }
    }
    >li.timeline-inverted {
      >.timeline-panel {
        padding: 0 100px 20px 20px;
      }
    }
  }
}
@media (max-width: 767px) {
  .navbar-nav {
    display: inline;
    .open {
      .dropdown-menu {
        border-bottom: 1px solid white;
        border-radius: 0;
      }
    }
  }
  .navbar-default {
    .navbar-brand {
      display: inline;
    }
    .navbar-toggle {
      .icon-bar {
        background-color: @background_color_5;
      }
    }
    .navbar-nav {
      .dropdown-menu {
        >li {
          >a {
            color: @color_15;
            background-color: @background_color_6;
            border-radius: 4px;
            margin-top: 2px;
          }
        }
      }
      .open {
        .dropdown-menu {
          >li {
            >a {
              color: @color_11;
              &:hover {
                background-color: @background_color_6;
                color: @color_2;
              }
              &:focus {
                background-color: @background_color_6;
                color: @color_2;
              }
            }
          }
        }
      }
    }
  }
  .dropdown-menu {
    padding-left: 10px;
    .dropdown-menu {
      padding-left: 20px;
      .dropdown-menu {
        padding-left: 30px;
      }
    }
  }
  li.dropdown.open {
    border: 0px solid red;
  }
}
@media (min-width: 768px) {
  ul.nav {
    li {
      >ul.dropdown-menu {
        left: 0;
        right: auto;
      }
    }
  }
}
@media (min-width: 992px) {
  .footer-info {
    text-align: left;
  }
}

#return-to-top {
  position: fixed;
  bottom: 20px;
  right: 20px;
  background: rgb(0, 0, 0);
  background: rgba(0, 0, 0, 0.7);
  width: 50px;
  height: 50px;
  display: block;
  text-decoration: none;
  -webkit-border-radius: 35px;
  -moz-border-radius: 35px;
  border-radius: 35px;
  display: none;
  -webkit-transition: all 0.3s linear;
  -moz-transition: all 0.3s ease;
  -ms-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}
#return-to-top i {
  color: #fff;
  margin: 0;
  position: relative;
  left: 16px;
  top: 13px;
  font-size: 19px;
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -ms-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}
#return-to-top:hover {
  background: rgba(0, 0, 0, 0.9);
}
#return-to-top:hover i {
  color: #fff;
  top: 5px;
}
.second-last-btn {
  margin-bottom: 1em;
  float: right;
}

.btn-xxl {
  padding: 1em;
}

.validationMessage {
  color: @color_13;
}
.validationElement {
  border: 1px solid @color_13;
}

.add-to-cart-btn {
  background-color: @color_16;
  text-align: center;
  color: white;
}
.add-to-cart-btn:focus, .add-to-cart-btn:hover, .add-to-cart-init-btn:focus, .add-to-cart-init-btn:hover {
  background-color: @color_2;
}
@media (max-width: 767px) {
  .add-to-cart-btn.input-number {
    font-size: 2rem;
    padding: 2px 0px;
  }
  button.add-to-cart-btn {
    padding-left: 6px;
    padding-right: 6px;
  }
}

.add-to-cart-init-btn {
  padding: 0.5em 1em;
  width: 100%;
  border: 2px solid @color_16;
  .add-to-cart-btn;
}

.fb-share-button {
    transform: scale(1.5, 1.25);
    transform-origin: top left;
}

